Add Vercel adapter and configuration for deployment
- Updated package.json to include @sveltejs/adapter-vercel dependency.
- Changed svelte.config.js to use @sveltejs/adapter-vercel.
- Modified pnpm-lock.yaml to reflect new adapter version.
- Updated symlinks.ts to handle existing symlinks gracefully.
- Added .vercel directory to outputs in turbo.json.
- Created vercel.json for Vercel deployment configuration.

--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -31,6 +31,7 @@
 	"dependencies": {
 		"@layerd/config-svelte": "workspace:*",
 		"@layerd/config-vite": "workspace:*",
-		"@layerd/ui": "workspace:*"
+		"@layerd/ui": "workspace:*",
+		"@sveltejs/adapter-vercel": "^5.10.2"
 	}
 }
