--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -14,14 +14,14 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-vercel": "^5.10.2",
-		"@sveltejs/kit": "^2.39.1",
+		"@sveltejs/adapter-auto": "^6.1.0",
+		"@sveltejs/kit": "^2.37.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
 		"@sveltejs/vite-plugin-svelte-inspector": "^5.0.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.13",
-		"svelte": "^5.38.10",
+		"svelte": "^5.38.8",
 		"svelte-check": "^4.3.1",
 		"tailwindcss": "^4.1.13",
 		"typescript": "^5.9.2",
