--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -22,14 +22,14 @@
     "@storybook/blocks": "^8.6.14",
     "@storybook/manager-api": "^8.6.14",
     "@storybook/sveltekit": "^9.1.5",
-    "@sveltejs/adapter-vercel": "^5.10.2",
-    "@sveltejs/kit": "^2.39.1",
+    "@sveltejs/adapter-auto": "^6.1.0",
+    "@sveltejs/kit": "^2.37.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.13",
     "storybook": "^9.1.5",
-    "svelte": "^5.38.10",
+    "svelte": "^5.38.8",
     "svelte-check": "^4.3.1",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
