--- a/packages/config/svelte/package.json
+++ b/packages/config/svelte/package.json
@@ -14,10 +14,10 @@
     "app.d.ts"
   ],
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "^5.10.2",
-    "@sveltejs/kit": "^2.39.1",
+    "@sveltejs/adapter-auto": "^6.1.0",
+    "@sveltejs/kit": "^2.37.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
-    "svelte": "^5.38.10",
+    "svelte": "^5.38.8",
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
