--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -57,8 +57,8 @@
 		"@layerd/config-ts": "workspace:*",
 		"@layerd/config-vite": "workspace:*",
 		"@layerd/tools": "workspace:*",
-		"@sveltejs/adapter-vercel": "^5.10.2",
-		"@sveltejs/package": "^2.5.1",
+		"@sveltejs/adapter-auto": "^6.1.0",
+		"@sveltejs/package": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
 		"@sveltejs/vite-plugin-svelte-inspector": "^5.0.1",
 		"@tailwindcss/cli": "^4.1.13",
@@ -69,7 +69,7 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"publint": "^0.3.12",
-		"svelte": "^5.38.10",
+		"svelte": "^5.38.8",
 		"svelte-check": "^4.3.1",
 		"tailwindcss": "^4.1.13",
 		"typescript": "^5.9.2",
@@ -86,7 +86,7 @@
 		"@iconify-json/material-symbols": "^1.2.34",
 		"@iconify-json/mdi": "^1.2.3",
 		"@iconify-json/solar": "^1.2.4",
-		"@sveltejs/kit": "^2.39.1",
+		"@sveltejs/kit": "^2.37.1",
 		"mode-watcher": "^1.1.0",
 		"runed": "^0.31.1"
 	}
