--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -14,6 +14,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@layerd/config-svelte": "workspace:*",
+		"@layerd/config-vite": "workspace:*",
 		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/kit": "^2.37.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
@@ -29,8 +31,7 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
-		"@layerd/config-svelte": "workspace:*",
-		"@layerd/config-vite": "workspace:*",
+		"@iconify-json/devicon": "^1.2.43",
 		"@layerd/ui": "workspace:*"
 	}
 }
