--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -14,6 +14,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@csstools/postcss-light-dark-function": "^2.0.10",
 		"@layerd/config-svelte": "workspace:*",
 		"@layerd/config-vite": "workspace:*",
 		"@sveltejs/adapter-auto": "^6.1.0",
