feat: add svg-spinners icon set and integrate spinner component
- Added @iconify-json/svg-spinners dependency to package.json and ui package.json.
- Enhanced input component in Svelte to support minlength and maxlength attributes, along with error handling and validation states.
- Implemented error display and shake animation for input fields on validation failure.
- Updated icon component to include a custom spinner SVG for loading states.
- Created new CSS styles for svg-spinners and adjusted existing styles for error states.
- Introduced remote data fetching for about and contact sections, including validation using valibot.
- Added validation patterns and functions for contact form fields.
- Created sections remote data fetching with TypeScript support.
- Added spinner.svg file for visual feedback during loading states.

--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -32,7 +32,9 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"@iconify-json/svg-spinners": "^1.2.4",
 		"@iconify-json/devicon": "^1.2.44",
-		"@layerd/ui": "workspace:*"
+		"@layerd/ui": "workspace:*",
+		"valibot": "^1.1.0"
 	}
 }
