--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@iconify-json/carbon": "^1.2.13",
     "@iconify-json/devicon": "^1.2.44",
     "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/svg-spinners": "^1.2.4",
     "@tailwindcss/postcss": "^4.1.13",
     "postcss": "^8.5.6",
     "turbo": "^2.5.6",
