--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@iconify-json/devicon": "^1.2.44",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/svg-spinners": "^1.2.4",
-    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/postcss": "4.1.13",
     "postcss": "^8.5.6",
-    "turbo": "^2.5.6",
+    "turbo": "2.5.6",
     "unplugin-icons": "^22.3.0"
   },
   "packageManager": "pnpm@9.15.4",
