--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -58,50 +58,50 @@
 		"@layerd/config-ts": "workspace:*",
 		"@layerd/config-vite": "workspace:*",
 		"@layerd/tools": "workspace:*",
-		"@sveltejs/adapter-auto": "^6.1.0",
-		"@sveltejs/package": "^2.5.3",
-		"@sveltejs/vite-plugin-svelte": "^6.2.0",
+		"@sveltejs/adapter-auto": "^6.1.1",
+		"@sveltejs/package": "^2.5.4",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@sveltejs/vite-plugin-svelte-inspector": "^5.0.1",
-		"@tailwindcss/cli": "^4.1.13",
+		"@tailwindcss/cli": "4.1.13",
 		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/postcss": "^4.1.13",
-		"@tailwindcss/typography": "^0.5.18",
-		"@tailwindcss/vite": "^4.1.13",
+		"@tailwindcss/postcss": "4.1.13",
+		"@tailwindcss/typography": "^0.5.19",
+		"@tailwindcss/vite": "4.1.13",
 		"postcss": "^8.5.6",
 		"postcss-cli": "^11.0.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"publint": "^0.3.13",
-		"svelte": "^5.39.4",
-		"svelte-check": "^4.3.1",
-		"tailwindcss": "^4.1.13",
-		"typescript": "^5.9.2",
-		"vite": "^7.1.7",
+		"svelte": "^5.39.8",
+		"svelte-check": "^4.3.2",
+		"tailwindcss": "4.1.13",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.9",
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
-		"@fontsource-variable/asta-sans": "^5.2.3",
+		"@fontsource-variable/asta-sans": "^5.2.4",
 		"@fontsource-variable/inter": "^5.2.8",
 		"@fontsource-variable/jetbrains-mono": "^5.2.8",
 		"@fontsource/inter": "^5.2.8",
 		"@iconify-json/carbon": "^1.2.13",
-		"@iconify-json/devicon": "^1.2.44",
+		"@iconify-json/devicon": "^1.2.45",
 		"@iconify-json/heroicons": "^1.2.3",
 		"@iconify-json/logos": "^1.2.9",
-		"@iconify-json/material-symbols": "^1.2.37",
+		"@iconify-json/material-symbols": "^1.2.40",
 		"@iconify-json/mdi": "^1.2.3",
 		"@iconify-json/solar": "^1.2.4",
 		"@iconify-json/streamline-logos": "^1.2.0",
 		"@iconify-json/svg-spinners": "^1.2.4",
-		"@sveltejs/kit": "^2.42.2",
+		"@sveltejs/kit": "^2.43.8",
 		"embla-carousel": "^8.6.0",
 		"embla-carousel-auto-scroll": "^8.6.0",
 		"embla-carousel-autoplay": "^8.6.0",
 		"embla-carousel-class-names": "^8.6.0",
 		"embla-carousel-svelte": "^8.6.0",
 		"mode-watcher": "^1.1.0",
-		"runed": "^0.32.0"
+		"runed": "^0.34.0"
 	},
 	"browserslist": [
 		">0.5%",
