--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -67,6 +67,7 @@
 		"@tailwindcss/postcss": "4.1.13",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "4.1.13",
+		"@types/three": "^0.180.0",
 		"postcss": "^8.5.6",
 		"postcss-cli": "^11.0.1",
 		"prettier": "^3.6.2",
@@ -100,8 +101,10 @@
 		"embla-carousel-autoplay": "^8.6.0",
 		"embla-carousel-class-names": "^8.6.0",
 		"embla-carousel-svelte": "^8.6.0",
+		"globe.gl": "^2.44.0",
 		"mode-watcher": "^1.1.0",
-		"runed": "^0.34.0"
+		"runed": "^0.34.0",
+		"three": "^0.180.0"
 	},
 	"browserslist": [
 		">0.5%",
