--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -53,6 +53,7 @@
 	},
 	"devDependencies": {
 		"@csstools/postcss-light-dark-function": "^2.0.11",
+		"@iconify-json/flagpack": "^1.2.6",
 		"@iconify/tailwind4": "^1.0.6",
 		"@layerd/config-svelte": "workspace:*",
 		"@layerd/config-ts": "workspace:*",
