--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -23,10 +23,10 @@
 		"@sveltejs/vite-plugin-svelte-inspector": "^5.0.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.14",
+		"@tailwindcss/vite": "4.1.13",
 		"svelte": "^5.39.8",
 		"svelte-check": "^4.3.2",
-		"tailwindcss": "^4.1.14",
+		"tailwindcss": "4.1.13",
 		"typescript": "^5.9.3",
 		"vite": "^7.1.9",
 		"vite-plugin-devtools-json": "^1.0.0"
