--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -30,11 +30,11 @@
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
-    "@tailwindcss/vite": "^4.1.14",
+    "@tailwindcss/vite": "4.1.13",
     "storybook": "^9.1.10",
     "svelte": "^5.39.8",
     "svelte-check": "^4.3.2",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "4.1.13",
     "typescript": "^5.9.3",
     "vite": "^7.1.9"
   },
