--- a/packages/config/vite/package.json
+++ b/packages/config/vite/package.json
@@ -13,7 +13,7 @@
     "@iconify-json/mdi": "^1.2.3",
     "@sveltejs/kit": "^2.43.8",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "@tailwindcss/vite": "^4.1.14",
+    "@tailwindcss/vite": "4.1.13",
     "unplugin-icons": "^22.4.2",
     "vite-plugin-devtools-json": "^1.0.0"
   },
