--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -17,7 +17,7 @@
 		"@csstools/postcss-light-dark-function": "^2.0.11",
 		"@layerd/config-svelte": "workspace:*",
 		"@layerd/config-vite": "workspace:*",
-		"@sveltejs/adapter-auto": "^6.1.1",
+		"@sveltejs/adapter-vercel": "^6.0.0",
 		"@sveltejs/kit": "^2.46.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@sveltejs/vite-plugin-svelte-inspector": "^5.0.1",
