--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -25,7 +25,7 @@
     "@storybook/blocks": "^8.6.14",
     "@storybook/manager-api": "^8.6.14",
     "@storybook/sveltekit": "^9.1.10",
-    "@sveltejs/adapter-auto": "^6.1.1",
+    "@sveltejs/adapter-vercel": "^6.0.0",
     "@sveltejs/kit": "^2.46.4",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/forms": "^0.5.10",
