--- a/packages/config/svelte/package.json
+++ b/packages/config/svelte/package.json
@@ -14,7 +14,7 @@
     "app.d.ts"
   ],
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^6.1.1",
+    "@sveltejs/adapter-vercel": "^6.0.0",
     "@sveltejs/kit": "^2.46.4",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "svelte": "^5.39.11",
