--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -59,7 +59,7 @@
 		"@layerd/config-ts": "workspace:*",
 		"@layerd/config-vite": "workspace:*",
 		"@layerd/tools": "workspace:*",
-		"@sveltejs/adapter-auto": "^6.1.1",
+		"@sveltejs/adapter-vercel": "^6.0.0",
 		"@sveltejs/package": "^2.5.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@sveltejs/vite-plugin-svelte-inspector": "^5.0.1",
